--- a/index.html
+++ b/index.html
@@ -1,223 +1,56 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Manifeste du Contemplateur d’Art</title>
-
-<style>
-  body {
-    margin: 0;
-    padding: 40px;
-    background: #000;
-    color: #00FF00;
-    font-family: "Courier New", monospace;
-    text-align: center;
-  }
-
-  h1 {
-    font-size: 42px;
-    margin-bottom: 20px;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-  }
-
-  .controls {
-    margin-bottom: 40px;
-  }
-
-  button {
-    background: black;
-    border: 1px solid #00FF00;
-    color: #00FF00;
-    font-family: "Courier New", monospace;
-    padding: 8px 16px;
-    cursor: pointer;
-    margin: 0 6px;
-    transition: 0.2s;
-  }
-
-  button:hover {
-    background: #00FF00;
-    color: black;
-  }
-
-  .container {
-    max-width: 900px;
-    margin: 0 auto;
-    text-align: left;
-  }
-
-  .paragraph {
-    opacity: 0;
-    transition: opacity 1.5s ease-in-out;
-    font-size: 20px;
-    line-height: 1.7;
-    margin: 45px 0;
-    white-space: pre-wrap;
-  }
-
-  .signature {
-    margin-top: 40px;
-    font-style: italic;
-    text-align: center;
-    opacity: 0.85;
-  }
-
-  .newsletter {
-    margin-top: 70px;
-    padding-top: 30px;
-    border-top: 1px solid #00FF00;
-    text-align: center;
-  }
-
-  .newsletter h2 {
-    font-size: 26px;
-    margin-bottom: 10px;
-  }
-
-  .newsletter p {
-    font-size: 16px;
-    margin-bottom: 25px;
-  }
-
-  .newsletter a {
-    display: inline-block;
-    padding: 12px 26px;
-    border: 2px solid #00FF00;
-    color: #00FF00;
-    text-decoration: none;
-    font-size: 18px;
-    transition: 0.2s;
-  }
-
-  .newsletter a:hover {
-    background: #00FF00;
-    color: black;
-  }
-
-  .cursor {
-    width: 12px;
-    height: 24px;
-    background: #00FF00;
-    margin: 50px auto;
-    animation: blink 1s steps(2, start) infinite;
-  }
-
-  @keyframes blink {
-    50% { opacity: 0; }
-  }
-
-  a {
-    color: #00FF00;
-  }
-</style>
-</head>
-
-<body>
-
-<h1>Manifeste du Contemplateur d’Art</h1>
-
-<div class="controls">
-  <button id="voiceToggle">▶ Activer la voix</button>
-  <button id="silenceMode">⏹ Silence only</button>
-</div>
-
-<div class="container">
-
-  <p class="paragraph">Le contemplateur d’art est un être poreux. Il ne prend pas possession de l’œuvre, il s’offre à elle. Il ne conquiert pas le sens, il le laisse venir à lui.</p>
-
-  <p class="paragraph">Il accueille.
-L’image, le geste, la matière, la forme — tout est reçu avant d’être compris.
-Le regard n’est pas un projecteur mais une membrane.</p>
-
-  <p class="paragraph">Contempler, ce n’est pas analyser.
-C’est ralentir jusqu’à sentir le mouvement secret de ce qui ne bouge pas.</p>
-
-  <p class="paragraph">L’œuvre n’a pas besoin d’être expliquée pour exister.
-Elle n’a pas d’obligation d’être comprise.
-Elle se suffit.
-Elle attend seulement un espace intérieur où résonner.</p>
-
-  <p class="paragraph">Le contemplateur d’art est un instrument.
-L’œuvre joue de lui.
-Il devient vibration, résonance, chambre d’écho.</p>
-
-  <p class="paragraph">L’attention qu’il porte est une forme d’amour.
-Un amour sans désir de posséder.
-Un amour qui ne retient rien.</p>
-
-  <p class="paragraph">Regarder une œuvre, c’est accepter d’être transformé par elle.
-Même imperceptiblement.
-Même silencieusement.</p>
-
-  <p class="paragraph">Contempler, c’est suspendre la volonté.
-S’ouvrir.
-Ne plus vouloir décider.
-Ne plus vouloir juger.</p>
-
-  <p class="paragraph">Dans ce renoncement, une autre réalité apparaît.
-Plus lente.
-Plus douce.
-Plus vaste.</p>
-
-  <p class="paragraph">Le contemplateur d’art ne cherche pas la vérité.
-Il se rend disponible à ce qui vit derrière les yeux.</p>
-
-  <p class="paragraph">C’est dans ce silence que l’œuvre respire.
-Et que l’être écoute.</p>
-
-  <p class="signature">— Alexandre Rosenbaum </p>
-
-  <div class="newsletter">
-    <h2>Correspondance</h2>
-    <p>
-      Recevoir, à intervalles rares,  
-      des fragments et des invitations à contempler.
-    </p>
-    <a href="http://eepurl.com/juafzg" target="_blank">
-      Entrer dans la correspondance
-    </a>
-  </div>
-
-  <p style="margin-top:50px; text-align:center;">
-    <a href="https://www.instagram.com/lc.du.chef/" target="_blank">
-      → Instagram : @lc.du.chef
-    </a>
-  </p>
-
-</div>
-
-<div class="cursor"></div>
-
 <script>
   const paragraphs = document.querySelectorAll(".paragraph");
   let index = 0;
   let voiceEnabled = false;
   let silenceOnly = false;
   const synth = window.speechSynthesis;
+  let selectedVoice = null;
 
-  document.getElementById("voiceToggle").addEventListener("click", () => {
+  const voiceBtn = document.getElementById("voiceToggle");
+  const silenceBtn = document.getElementById("silenceToggle");
+
+  // Sélection d’une voix féminine française (si disponible)
+  function loadVoices() {
+    const voices = synth.getVoices();
+    selectedVoice = voices.find(v =>
+      v.lang === "fr-FR" &&
+      (v.name.toLowerCase().includes("female") ||
+       v.name.toLowerCase().includes("femme") ||
+       v.name.toLowerCase().includes("julie") ||
+       v.name.toLowerCase().includes("audrey"))
+    ) || voices.find(v => v.lang === "fr-FR") || voices[0];
+  }
+
+  loadVoices();
+  if (speechSynthesis.onvoiceschanged !== undefined) {
+    speechSynthesis.onvoiceschanged = loadVoices;
+  }
+
+  voiceBtn.addEventListener("click", () => {
     voiceEnabled = !voiceEnabled;
     silenceOnly = false;
-    document.getElementById("voiceToggle").innerText =
-      voiceEnabled ? "⏸ Désactiver la voix" : "▶ Activer la voix";
+    voiceBtn.textContent = voiceEnabled ? "⏸ Désactiver la voix" : "▶ Activer la voix";
+    silenceBtn.textContent = "◼ Silence only";
   });
 
-  document.getElementById("silenceMode").addEventListener("click", () => {
+  silenceBtn.addEventListener("click", () => {
     silenceOnly = true;
     voiceEnabled = false;
     synth.cancel();
-    document.getElementById("voiceToggle").innerText = "▶ Activer la voix";
+    silenceBtn.textContent = "✔ Silence activé";
+    voiceBtn.textContent = "▶ Activer la voix";
   });
 
   function speak(text) {
-    if (!voiceEnabled || silenceOnly) return;
+    if (!voiceEnabled || silenceOnly || !selectedVoice) return;
+
     const utterance = new SpeechSynthesisUtterance(text);
+    utterance.voice = selectedVoice;
     utterance.lang = "fr-FR";
-    utterance.rate = 0.75;
-    utterance.pitch = 1;
-    utterance.volume = 0.9;
+    utterance.rate = 0.6;      // PLUS LENT
+    utterance.pitch = 1.05;    // LÉGÈRE DOUCEUR
+    utterance.volume = 0.85;
+
     synth.cancel();
     synth.speak(utterance);
   }
@@ -226,14 +59,16 @@ Et que l’être écoute.</p>
     if (index < paragraphs.length) {
       const p = paragraphs[index];
       p.style.opacity = 1;
-      speak(p.innerText);
+
+      // petit silence avant la lecture (respiration)
+      setTimeout(() => {
+        speak(p.innerText);
+      }, 600);
+
       index++;
-      setTimeout(showNext, 4500);
+      setTimeout(showNext, 5200); // rythme plus lent
     }
   }
 
   showNext();
 </script>
-
-</body>
-</html>
